# GooseSwarm

./: .gitignore  API_REFERENCE.md  README.md  headless.py  pyproject.toml  tornado_server.py
api/: direct_messages.py  payments.py  websocket.py
mcp/: README.md  goose_libp2p_mcp.py  goose_profile.yaml  pyproject.toml  test_mcp.py
py-peer-frontend/src/: App.tsx
py-peer-frontend/src/api/: client.ts
py-peer-frontend/src/components/: Chat.tsx  ConnectionPanel.tsx  DirectChat.tsx  PaymentModal.tsx  PeerList.tsx
py-peer-frontend/src/context/: PyPeerContext.tsx
