[project]
name = "py-peer"
version = "0.1.0"
description = "Python implementation of the Universal Connectivity peer and p2p chat experience."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "textual>=0.47.0",
    "libp2p @ git+https://github.com/sumanjeet0012/py-libp2p.git@6d94f032e685222ebf0ceb156e97e5f7e76cd777",
    "trio>=0.22.0",
    "base58",
    "protobuf",
    "janus>=1.0.0",
    "trio_asyncio",
    "kivy>=2.3.0",
    "kivymd>=1.2.0",
    "python-dotenv>=1.2.2",
    "groq>=1.0.0",
    "tornado>=6.5.5"
]

[project.scripts]
py-peer = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.hatch.metadata]
allow-direct-references = true